--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ethers": "^6.8.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "viem": "^2.33.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
